--- a/src/sql-config/config/vars.vm
+++ b/src/sql-config/config/vars.vm
@@ -36,6 +36,7 @@ suppliers_all int8[] = ARRAY[supplier_wh_texas, supplier_wh_arizona, supplier_wh
 
 ')
 
+--see CountryDefDO for the ids
 #set($vars_country_codes = '
 -- country codes
 cc_de int = 2;
