#76424: staic mail images pointing to github/main

--- a/src/mail-templates/mails_customers/IB_master/variable.vm
+++ b/src/mail-templates/mails_customers/IB_master/variable.vm
@@ -2,7 +2,7 @@
 ## ----------------------
 #set($language = $userMailLO.getLanguage())
 
-#set($imagePath = $mailResourcesBaseUrl)
+#set($imagePath = "https://intershop.github.io/iom-blueprint-project/src/mail-templates/mails_customers/mailImages/")
 
 ## set order numbers
 ## -----------------
